# lavamusic-py

./: .gitignore  pyproject.toml
src/: config.py  main.py
src/cogs/: general.py  music.py
src/core/music/: player.py
src/core/utils/: checks.py  format.py  regex.py
src/listeners/: on_ready.py  on_wavelink.py
