[tool.poetry]
name = "moe-bot"
version = "0.1.0"
description = ""
authors = ["appujet <sdipedit@gmail.com>"]
readme = "README.md"
packages = [{include = "moe", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.3.2"
wavelink = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
